Bug 508521 - Crash on sending email with Kmail
Summary: Crash on sending email with Kmail
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Dispatcher Agent (other bugs)
Version First Reported In: 6.5.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-08-20 14:55 UTC by Simon Brown
Modified: 2025-08-23 21:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.1
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/238056/events/1c333787462f4879bb76e5937e90a99e/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Brown 2025-08-20 14:55:22 UTC
Application: akonadi_maildispatcher_agent (6.5.0 (25.08.0))

ApplicationNotResponding [ANR]: false
Qt Version: 6.9.1
Frameworks Version: 6.17.0
Operating System: Linux 6.14.0-28-generic x86_64
Windowing System: Wayland
Distribution: KDE neon User Edition
DrKonqi: 6.4.4 [CoredumpBackend]

-- Information about the crash:
On composing a mail with Kmail I sent it usng the Ctrl+Enter short cut. After completing message signature I was notified that the dispatcher had crashed.

I have sent other emails today without problem. The only change for this one is that I noticed the wrong Identity was set. I removed the wrong identity in the settings and set it as default. As the compose dialogue had been open during this time I suspect it was trying to send with the deleted identity.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: akonadi_maildispatcher_agent (akonadi_maildispatcher_agent), signal: Aborted

Downloading separate debug info for /usr/bin/akonadi_maildispatcher_agent...
Downloading separate debug info for /usr/bin/akonadi_maildispatcher_agent...
[New LWP 63192]
[New LWP 63198]
[New LWP 63205]
[New LWP 63195]
[New LWP 63194]
Downloading separate debug info for system-supplied DSO at 0x766701138000...
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `/usr/bin/akonadi_maildispatcher_agent --identifier akonadi_maildispatcher_agent'.
Program terminated with signal SIGABRT, Aborted.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
#0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44

warning: 44	./nptl/pthread_kill.c: No such file or directory
[Current thread is 1 (Thread 0x7666f8aa0d00 (LWP 63192))]
Cannot QML trace cores :(
add symbol table from file "/lib/x86_64-linux-gnu/libc.so.6"
Downloading separate debug info for /lib/x86_64-linux-gnu/libKF6Crash.so.6...
add symbol table from file "/lib/x86_64-linux-gnu/libKF6Crash.so.6"
add symbol table from file "/lib/x86_64-linux-gnu/libQt6Core.so.6"
add symbol table from file "/lib/x86_64-linux-gnu/libQt6Widgets.so.6"
Downloading separate debug info for /lib/x86_64-linux-gnu/libKF6WidgetsAddons.so.6...
Downloading separate debug info for /lib/x86_64-linux-gnu/libKF6WidgetsAddons.so.6...
add symbol table from file "/lib/x86_64-linux-gnu/libKF6WidgetsAddons.so.6"
Downloading separate debug info for /usr/lib/x86_64-linux-gnu/qt6/plugins/pim6/mailtransport/mailtransport_smtpplugin.so...
Downloading separate debug info for /usr/lib/x86_64-linux-gnu/qt6/plugins/pim6/mailtransport/mailtransport_smtpplugin.so...
add symbol table from file "/usr/lib/x86_64-linux-gnu/qt6/plugins/pim6/mailtransport/mailtransport_smtpplugin.so"
Downloading separate debug info for /lib/x86_64-linux-gnu/libKPim6SMTP.so.6...
add symbol table from file "/lib/x86_64-linux-gnu/libKPim6SMTP.so.6"
Downloading separate debug info for /lib/x86_64-linux-gnu/libglib-2.0.so.0...
warning: could not find '.gnu_debugaltlink' file for /lib/x86_64-linux-gnu/libglib-2.0.so.0
Downloading separate debug info for /lib/x86_64-linux-gnu/libglib-2.0.so.0...
add symbol table from file "/lib/x86_64-linux-gnu/libglib-2.0.so.0"
warning: could not find '.gnu_debugaltlink' file for /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.8000.0
add symbol table from file "/usr/bin/akonadi_maildispatcher_agent"
Downloading source file /usr/src/kdepim-runtime-4:25.08.0-0zneon+24.04+noble+release+build38/agents/maildispatcher/maildispatcheragent.cpp...
Downloading source file /usr/include/KPim6/AkonadiAgentBase/akonadi/agentbase.h...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qobject.cpp...
Downloading source file /usr/src/ksmtp-25.08.0-0zneon+24.04+noble+release+build19/obj-x86_64-linux-gnu/src/KPim6SMTP_autogen/include/moc_session.cpp...
Downloading source file /usr/include/x86_64-linux-gnu/qt6/QtCore/qobjectdefs.h...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qobjectdefs_impl.h...
Downloading source file /usr/src/kmailtransport-25.08.0-0zneon+24.04+noble+release+build25/src/plugins/smtp/smtpjob.cpp...
Downloading source file /usr/include/x86_64-linux-gnu/qt6/QtCore/qflags.h...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/widgets/dialogs/qdialog.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/widgets/kernel/qwidget.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qlogging.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qassert.cpp...
Download failed: Invalid argument.  Continuing without source file ./stdlib/./stdlib/abort.c.
Download failed: Invalid argument.  Continuing without source file ./signal/../sysdeps/posix/raise.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
Download failed: Invalid argument.  Continuing without source file ./misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_create.c.
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp...
Download failed: Invalid argument.  Continuing without source file ./io/../sysdeps/unix/sysv/linux/poll.c.
add symbol table from file "/lib/x86_64-linux-gnu/libQt6DBus.so.6"
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/dbus/qdbusconnectionmanager.cpp...
Downloading source file /usr/src/ksmtp-25.08.0-0zneon+24.04+noble+release+build19/src/sessionthread.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthreadpool.cpp...
Downloading source file /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qwaitcondition_unix.cpp...
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_cond_wait.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/futex-internal.c.
[Current thread is 1 (Thread 0x7666f8aa0d00 (LWP 63192))]

Thread 5 (Thread 0x7666f85ff6c0 (LWP 63194)):
#0  0x00007666ffb1b4cd in __GI___poll (fds=0x5c58bc680b30, nfds=5, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007666fe08a68e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007666fe02aa63 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000076670046124f in QEventDispatcherGlib::processEvents (this=0x7666f0000b70, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x00007667006c0b6b in QEventLoop::exec (this=0x7666f85fe850, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#5  0x00007667005ce6b7 in QThread::exec (this=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#6  0x000076670059482c in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:434
#7  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:366
#8  QThreadPrivate::start (arg=0x5c58bc629450) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:394
#9  0x00007666ffa9caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#10 0x00007666ffb29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 4 (Thread 0x7666f7dfe6c0 (LWP 63195)):
#0  0x00007666ffb1b4cd in __GI___poll (fds=0x5c58bc6297f0, nfds=3, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007666fe08a68e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007666fe02aa63 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000076670046124f in QEventDispatcherGlib::processEvents (this=0x7666e8000b70, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x00007667006c0b6b in QEventLoop::exec (this=0x7666f7dfd800, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#5  0x00007667005ce6b7 in QThread::exec (this=this@entry=0x7667009a4680 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#6  0x000076670098691d in QDBusConnectionManager::run (this=0x7667009a4680 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/dbus/qdbusconnectionmanager.cpp:144
#7  0x000076670059482c in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:434
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:366
#9  QThreadPrivate::start (arg=0x7667009a4680 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:394
#10 0x00007666ffa9caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x00007666ffb29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 3 (Thread 0x7666f69266c0 (LWP 63205)):
#0  0x00007666ffa98d71 in __futex_abstimed_wait_common64 (private=<optimized out>, cancel=true, abstime=0x7666f69257a0, op=137, expected=0, futex_word=0x7666ec30a740) at ./nptl/futex-internal.c:57
#1  __futex_abstimed_wait_common (cancel=true, private=<optimized out>, abstime=0x7666f69257a0, clockid=<optimized out>, expected=0, futex_word=0x7666ec30a740) at ./nptl/futex-internal.c:87
#2  __GI___futex_abstimed_wait_cancelable64 (futex_word=0x7666ec30a740, expected=0, clockid=<optimized out>, abstime=0x7666f69257a0, private=<optimized out>) at ./nptl/futex-internal.c:139
#3  0x00007666ffa9bc8e in __pthread_cond_wait_common (abstime=0x7666f69257a0, clockid=1, mutex=0x7666ec30a6f0, cond=0x7666ec30a718) at ./nptl/pthread_cond_wait.c:503
#4  ___pthread_cond_timedwait64 (cond=0x7666ec30a718, mutex=0x7666ec30a6f0, abstime=0x7666f69257a0) at ./nptl/pthread_cond_wait.c:652
#5  0x000076670059b5fc in QWaitConditionPrivate::wait_relative (deadline=..., this=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qwaitcondition_unix.cpp:57
#6  QWaitConditionPrivate::wait (deadline=..., this=0x7666ec30a6f0) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qwaitcondition_unix.cpp:65
#7  QWaitCondition::wait (this=<optimized out>, mutex=0x7666ec2ff038, deadline=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qwaitcondition_unix.cpp:145
#8  0x0000766700595956 in QThreadPoolThread::run (this=0x7666ec309540) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthreadpool.cpp:119
#9  0x000076670059482c in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:434
#10 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:366
#11 QThreadPrivate::start (arg=0x7666ec309540) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:394
#12 0x00007666ffa9caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#13 0x00007666ffb29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 2 (Thread 0x7666f71896c0 (LWP 63198)):
#0  0x00007666ffb1b4cd in __GI___poll (fds=0x5c58bc70d320, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007666fe08a68e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007666fe02aa63 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x0000766700461271 in QEventDispatcherGlib::processEvents (this=0x7666ec000b70, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp:401
#4  0x00007667006c0b6b in QEventLoop::exec (this=0x7666f71887c0, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#5  0x00007667005ce6b7 in QThread::exec (this=this@entry=0x5c58bc702860) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#6  0x00007666f8a19b3a in KSmtp::SessionThread::run (this=0x5c58bc702860) at /usr/src/ksmtp-25.08.0-0zneon+24.04+noble+release+build19/src/sessionthread.cpp:151
#7  0x000076670059482c in operator() (__closure=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:434
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:366
#9  QThreadPrivate::start (arg=0x5c58bc702860) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/thread/qthread_unix.cpp:394
#10 0x00007666ffa9caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x00007666ffb29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x7666f8aa0d00 (LWP 63192)):
[KCrash Handler]
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
#9  0x00007666ffa4527e in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#10 0x00007666ffa288ff in __GI_abort () at ./stdlib/abort.c:79
#11 0x000076670072a09e in qAbort () at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qassert.cpp:46
#12 qt_message_fatal<QString&> (message=..., context=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qlogging.cpp:2149
#13 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, context=..., msg=msg@entry=0x7666fe4a7c88 "QWidget: Cannot create a QWidget without QApplication", ap=ap@entry=0x7ffea5deedf8) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qlogging.cpp:381
#14 0x000076670072b779 in QMessageLogger::fatal (this=this@entry=0x7ffea5def060, msg=msg@entry=0x7666fe4a7c88 "QWidget: Cannot create a QWidget without QApplication") at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qlogging.cpp:883
#15 0x00007666fe86e91b in QWidgetPrivate::init (this=0x5c58bc6874e0, parentWidget=0x0, f=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/widgets/kernel/qwidget.cpp:948
#16 0x00007666fe617c11 in QDialog::QDialog (this=<optimized out>, parent=<optimized out>, f=..., this=<optimized out>, parent=<optimized out>, f=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/widgets/dialogs/qdialog.cpp:376
#17 0x00007666ff733434 in KPasswordDialog::KPasswordDialog (this=<optimized out>, parent=<optimized out>, flags=..., this=<optimized out>, parent=<optimized out>, flags=...) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qflags.h:76
#18 0x00007666f8a5a104 in MailTransport::SmtpJob::startLoginJob (this=0x5c58bc73ca40) at /usr/src/kmailtransport-25.08.0-0zneon+24.04+noble+release+build25/src/plugins/smtp/smtpjob.cpp:226
#19 0x000076670067cce9 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qobjectdefs_impl.h:461
#20 doActivate<false> (sender=0x5c58bc70d380, signal_index=3, argv=0x7ffea5def410) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qobject.cpp:4146
#21 0x00007666f8a10590 in QMetaObject::activate<void, KSmtp::Session::State> (ret=0x0, local_signal_index=0, mo=0x7666f8a22780 <KSmtp::Session::staticMetaObject>, sender=<optimized out>) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qobjectdefs.h:306
#22 KSmtp::Session::stateChanged (this=<optimized out>, _t1=<optimized out>) at /usr/src/ksmtp-25.08.0-0zneon+24.04+noble+release+build19/obj-x86_64-linux-gnu/src/KPim6SMTP_autogen/include/moc_session.cpp:155
#23 0x000076670060af60 in QObject::event (this=0x5c58bc72b560, e=0x7666ec31f900) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qobject.cpp:1431
#24 0x00007667006b62ac in doNotify (event=<optimized out>, receiver=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp:1207
#25 QCoreApplication::notify (event=<optimized out>, receiver=<optimized out>, this=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp:1190
#26 QCoreApplication::notifyInternal2 (receiver=0x5c58bc72b560, event=0x7666ec31f900) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp:1106
#27 0x00007667006b638d in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp:1546
#28 0x00007667006b66db in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5c58bc654680) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qcoreapplication.cpp:1879
#29 0x000076670046227f in postEventSourceDispatch (s=0x5c58bc66b240) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#30 0x00007666fe02b5c5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007666fe08a737 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007666fe02aa63 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x000076670046124f in QEventDispatcherGlib::processEvents (this=0x5c58bc627130, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#34 0x00007667006c0b6b in QEventLoop::exec (this=0x7ffea5def800, flags=...) at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#35 0x00007667006b96ef in QCoreApplication::exec () at /usr/src/qt6-base-6.9.1-0zneon+24.04+noble+release+build118/src/corelib/global/qflags.h:77
#36 0x00005c5897e12557 in Akonadi::AgentBase::initCore<MailDispatcherAgent> (argv=<optimized out>, argc=<optimized out>) at /usr/include/KPim6/AkonadiAgentBase/akonadi/agentbase.h:449
#37 main (argc=<optimized out>, argv=<optimized out>) at /usr/src/kdepim-runtime-4:25.08.0-0zneon+24.04+noble+release+build38/agents/maildispatcher/maildispatcheragent.cpp:287

Reported using DrKonqi
Comment 1 Simon Brown 2025-08-21 08:47:34 UTC
I think this problem was caused by an empty password in the smtp config. I had updated neon during the update to 25.08 so I think I had a partial upgrade. This seemed to cause wallet problems, which lead to recreating accounts. Another round of updates a day later and re-entering the passwords seems to have stopped the crash.
Comment 2 Ingo Klöcker 2025-08-22 20:10:32 UTC
The crash isn't fixed (yet). It happens whenever the agent tries to ask for the SMTP password.

It will be fixed by https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/264
Comment 3 Ingo Klöcker 2025-08-23 13:38:44 UTC
The fix has also been backported for the 25.08 release series: https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/265
Comment 4 Ingo Klöcker 2025-08-23 21:37:55 UTC
Git commit 65e4e1a377b30d7c1c1af6a10458c4a9e5d92717 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 22/08/2025 at 20:08.
Pushed by kloecker into branch 'master'.

Mail dispatcher agent needs widgets

The agent might have to ask for the SMTP password and this dialog is
a QWidget.

M  +1    -1    agents/maildispatcher/CMakeLists.txt
M  +2    -2    agents/maildispatcher/maildispatcheragent.cpp
M  +2    -2    agents/maildispatcher/maildispatcheragent.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/65e4e1a377b30d7c1c1af6a10458c4a9e5d92717
Comment 5 Ingo Klöcker 2025-08-23 21:38:20 UTC
Git commit a32a5fea481930f3af6a58492396ef3680190883 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 23/08/2025 at 13:21.
Pushed by kloecker into branch 'release/25.08'.

Mail dispatcher agent needs widgets

The agent might have to ask for the SMTP password and this dialog is
a QWidget.
(cherry picked from commit 65e4e1a377b30d7c1c1af6a10458c4a9e5d92717)

M  +1    -1    agents/maildispatcher/CMakeLists.txt
M  +2    -2    agents/maildispatcher/maildispatcheragent.cpp
M  +2    -2    agents/maildispatcher/maildispatcheragent.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/a32a5fea481930f3af6a58492396ef3680190883