Mail dispatcher agent needs widgets

The agent might have to ask for the SMTP password and this dialog is
a QWidget.

BUG: 508521